<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="ripdpi_ui_settings">

    <Preference
        android:key="ripdpi_readme"
        android:title="@string/ripdpi_readme_link"
        android:icon="@drawable/ic_github_36">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/ripdpi_docs" />
    </Preference>

    <androidx.preference.PreferenceCategory
        android:title="@string/ripdpi_proxy">

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_proxy_ip"
            android:title="@string/bye_dpi_proxy_ip_setting"
            android:defaultValue="127.0.0.1"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_proxy_port"
            android:title="@string/ripdpi_proxy_port_setting"
            android:inputType="number"
            android:defaultValue="1080"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_max_connections"
            android:title="@string/ripdpi_max_connections_setting"
            android:inputType="number"
            android:defaultValue="512"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_buffer_size"
            android:title="@string/ripdpi_buffer_size_setting"
            android:inputType="number"
            android:defaultValue="16384"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:key="ripdpi_no_domain"
            android:title="@string/ripdpi_no_domain_setting"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="ripdpi_tcp_fast_open"
            android:title="@string/ripdpi_tcp_fast_open_setting"
            android:defaultValue="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/ripdpi_desync">

        <DropDownPreference
            android:key="ripdpi_hosts_mode"
            android:title="@string/ripdpi_hosts_mode_setting"
            android:entries="@array/ripdpi_hosts_modes"
            android:entryValues="@array/ripdpi_hosts_modes_entries"
            android:defaultValue="disable"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_hosts_blacklist"
            android:title="@string/ripdpi_hosts_blacklist_setting"
            android:dialogTitle="@string/ripdpi_hosts_blacklist_setting"
            android:inputType="textMultiLine"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_hosts_whitelist"
            android:title="@string/ripdpi_hosts_whitelist_setting"
            android:dialogTitle="@string/ripdpi_hosts_whitelist_setting"
            android:inputType="textMultiLine"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_default_ttl"
            android:title="@string/ripdpi_default_ttl_setting"
            android:inputType="number"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            android:key="ripdpi_desync_method"
            android:title="@string/ripdpi_desync_method_setting"
            android:entries="@array/ripdpi_desync_methods"
            android:entryValues="@array/ripdpi_desync_methods_entries"
            android:defaultValue="disorder"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_split_position"
            android:title="@string/ripdpi_split_position_setting"
            android:inputType="numberSigned"
            android:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:key="ripdpi_split_at_host"
            android:title="@string/ripdpi_split_at_host_setting"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="ripdpi_drop_sack"
            android:title="@string/ripdpi_drop_sack_setting"
            android:defaultValue="false" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_fake_ttl"
            android:title="@string/ripdpi_fake_ttl_setting"
            android:inputType="number"
            android:defaultValue="8"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_fake_offset"
            android:title="@string/ripdpi_fake_offset_setting"
            android:inputType="number"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_fake_sni"
            android:title="@string/sni_of_fake_packet"
            android:defaultValue="www.iana.org"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_oob_data"
            android:title="@string/oob_data"
            android:defaultValue="a"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/ripdpi_protocols_category"
        android:summary="@string/ripdpi_protocols_hint">

        <CheckBoxPreference
            android:key="ripdpi_desync_http"
            android:title="@string/desync_http"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="ripdpi_desync_https"
            android:title="@string/desync_https"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="ripdpi_desync_udp"
            android:title="@string/desync_udp"
            android:defaultValue="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/desync_http_category">

        <CheckBoxPreference
            android:key="ripdpi_host_mixed_case"
            android:title="@string/ripdpi_host_mixed_case_setting"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="ripdpi_domain_mixed_case"
            android:title="@string/ripdpi_domain_mixed_case_setting"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="ripdpi_host_remove_spaces"
            android:title="@string/ripdpi_host_remove_spaces_setting"
            android:defaultValue="false"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/desync_https_category">

        <CheckBoxPreference
            android:key="ripdpi_tlsrec_enabled"
            android:title="@string/ripdpi_tlsrec_enabled_setting"
            android:defaultValue="false"/>

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_tlsrec_position"
            android:title="@string/ripdpi_tlsrec_position_setting"
            android:inputType="numberSigned"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:key="ripdpi_tlsrec_at_sni"
            android:title="@string/ripdpi_tlsrec_at_sni_setting"
            android:defaultValue="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/desync_udp_category">

        <com.takisoft.preferencex.EditTextPreference
            android:key="ripdpi_udp_fake_count"
            android:title="@string/ripdpi_udp_fake_count"
            android:inputType="number"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

</PreferenceScreen>
